fix padding on mobile

--- a/recipes/css/queries.css
+++ b/recipes/css/queries.css
@@ -9,6 +9,9 @@
 }
 
 @media (max-width: 400px) {
+  .body {
+    padding: 0;
+  }
   .product-card {
     padding: 0;
   }
